Start making placeholder heights before images load to avoid jumps

--- a/src/styles/util/_variables.scss
+++ b/src/styles/util/_variables.scss
@@ -1,13 +1,28 @@
 // variables
+
+// responsiveness
 $browser-min-width: 320px;
 $browser-max-width: 1400px;
 $page-content-max-width: 1100px;
-$size-bump: 10;
+
+// spacing, element dimensions
 $content-container-margin: 10px 20px;
 $content-space-xs: 10px;
 $content-space-sm: 20px;
 $content-space-md: 35px;
 $content-space-lg: 50px;
+$icon-width: 55px;
+$icon-height: 55px;
+$icon-background-size: 75px 93px;
+$card-height: 50px;
+$tablet-width: 768px;
+$desktop-width: 1024px;
+$footer-height: 100px;
+$dewald-avatar-height: 268px;
+$dewald-avatar-height-mobile: 110px;
+$dewald-avatar-width: 264px;
+
+// font and background colors
 $black: #2f2f2f;
 $light-gray: #cccccc;
 $lighter-gray: #e3e0e0;
@@ -17,19 +32,15 @@ $desert-sand: #ffe599ff;
 $desert-white: #fcfafaff;
 $desert-red: #9a0646;
 $ice-blue: #0090c415;
-$foxdoubt-script: "Pacifico", cursive;
-$icon-width: 55px;
-$icon-height: 55px;
-$icon-background-size: 75px 93px;
 
+// typography
+$foxdoubt-script: "Pacifico", cursive;
 $article-title-font-size: 28px;
 $h3-heading-font-size: 20px;
 $text-xxl: 70px;
-
 $article-content-font-size: 14px;
 $article-content-font-size-sm: 12px;
 $article-content-font-size-xs: 9px;
-$card-height: 50px;
-$tablet-width: 768px;
-$desktop-width: 1024px;
-$footer-height: 100px;
+
+// misc
+$size-bump: 10;
